plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.wojtasj'
version = '0.0.1-SNAPSHOT'
description = 'AI Chat Bridge'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-logging:3.5.5'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-validation:3.5.5'
	implementation 'org.springframework:spring-web:6.2.10'
	implementation 'org.flywaydb:flyway-core:11.11.2'
	implementation 'com.discord4j:discord4j-core:3.3.0-RC3'
	implementation 'io.projectreactor:reactor-core:3.7.9'
	implementation 'org.springframework:spring-aspects:7.0.0-M8'
	implementation 'org.springframework.retry:spring-retry:2.0.12'
	implementation 'io.jsonwebtoken:jjwt-api:0.13.0'
	implementation('org.json:json:20250517') {
		exclude group: 'com.vaadin.external.google', module: 'android-json'
	}
	implementation('org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.12') {
		exclude group: 'com.vaadin.external.google', module: 'android-json'
	}
	implementation 'org.springframework.boot:spring-boot-starter-actuator'

	developmentOnly 'org.springframework.boot:spring-boot-devtools'

	compileOnly 'org.projectlombok:lombok'

	runtimeOnly 'org.flywaydb:flyway-database-postgresql:11.11.2'
	runtimeOnly 'org.postgresql:postgresql'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.13.0'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.13.0'

	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testImplementation 'org.testcontainers:junit-jupiter:1.21.3'
	testImplementation 'org.junit.jupiter:junit-jupiter:5.13.4'
	testImplementation 'org.assertj:assertj-core:3.26.3'
	testImplementation 'com.github.tomakehurst:wiremock-standalone:3.0.1'
	testImplementation 'io.projectreactor:reactor-test:3.7.9'
	testImplementation 'org.mockito:mockito-core:5.19.0'
	testImplementation 'org.mockito:mockito-junit-jupiter:5.19.0'
	testImplementation 'net.bytebuddy:byte-buddy-agent:1.17.7'
	testImplementation 'com.h2database:h2:2.3.232'

	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
	useJUnitPlatform()
	jvmArgs "-javaagent:${configurations.testRuntimeClasspath.find { it.name.contains('byte-buddy-agent') }}"
}
